--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@angular-devkit/build-angular": "^18.0.3",
     "@angular/cli": "^18.0.3",
     "@angular/compiler-cli": "^18.0.3",
+    "@types/d3-scale": "^4.0.9",
+    "@types/d3-selection": "^3.0.11",
     "@types/d3-shape": "^3.1.7",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.20",
